
Change Log Update (00.00.52)
* 2016-11-03
+ Create new unit tests for SessionIO testing main MCI regex sequence parsing.
  Completed tests for all (7) groups of codes.

Change Log Update (00.00.51)
* 2016-11-02
+ Minor Updates to menu system
+ Refactored regexp for pipe2ansi, also broke out code_map and parsing
  to more easily unit test results from regexp.
+ Updated unit tests for previous code changes.
- WIP add new unit tests for code mapping

Change Log Update (00.00.50)
* 2016-11-01
+ Create Linux Workspace and project files
+ Fixes issues with linux terminal closing causing exceptions in io_service
  Now the io_service loops and reload any disconnects which doesn't cause
  issues to other connections and threads.
+ Added flag for global shutdown on the communation to let the thread loop
  know when the io_service is ready to be shutdown for good.

* 2016-10-15
+ SessionIO::pipe2ansi, added new custom screen MCI translations lookup/replacements
  On custom screen we need to ability to compile of a list of MCI codes specific 
  to an interface, then when the ansi is parsed it quickly process these interface 
  specific codes.

Change Log Update (00.00.49)
* 2016-10-11
+ Updated workspace, moved project files to separate win32 folder, Linux and BSD etc..
  will each have their own project folder for building the application to keep things
  cleaner.

Change Log Update (00.00.48)
* 2016-09-20
+ More work on Sign-up and saving user data.
+ Narrowed down saving Birth date and Call Dates to the database in UTC Unix epoch.
+ Need to test some on applying different times differences.  Local time works good
  Good for system, but each user will select and have their own local time represented.
+ Also added Invalid Email prompt when the email entered already exists.

Change Log Update (00.00.47)
* 2016-09-17
+ Worked more on the sign-up process,  Now saving user record and security record
  to the Sqlite database.  Still need a little work on the dates and best way