@@ -253,9 +253,8 @@ std::string SecurityDao::insertSecurityQryString(query_ptr qry, security_ptr sec
     ssType << "); ";
 
     // Setup String to build the Query.
-    std::string newQueryString = "";
-    newQueryString = ssColumn.str();
-    newQueryString.append(ssType.str());
+    std::string newQueryString = ssColumn;
+    newQueryString.append(ssType);
 
     // Mprint statement to avoid injections.
     std::string result = sqlite3_mprintf(newQueryString.c_str(),
@@ -297,8 +296,7 @@ std::string SecurityDao::updateSecurityQryString(query_ptr qry, security_ptr sec
     }
 
     // Closing For Query.
-    std::string newQueryString = "";
-    newQueryString = ssColumn.str();
+    std::string newQueryString = ssColumn;
     newQueryString.append(" WHERE iId = %ld; ");
 
     // Mprint statement to avoid injections.
